// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders as \`disabled\` when defined 1`] = `
.c1 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
  opacity: 0.5;
}

.c2 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c2::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2:hover:not(:focus) {
  border-color: #5A5F65;
}

.c2:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c2:invalid,
.c2:-moz-ui-invalid {
  box-shadow: none;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2:focus {
  border-color: #0CD664;
  outline: none;
}

@media (min-width:31.25em) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 select,
  .c0 input {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<fieldset>
  <label
    className="c0"
  >
    <span
      className="c1"
      disabled={true}
    >
      Text
    </span>
    <input
      className="c2"
      disabled={true}
      placeholder=" "
      type="text"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
      disabled={true}
    >
      Date
    </span>
    <input
      className="c2"
      disabled={true}
      placeholder=" "
      type="date"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
      disabled={true}
    >
      Email
    </span>
    <input
      className="c2"
      disabled={true}
      placeholder=" "
      type="email"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
      disabled={true}
    >
      Number
    </span>
    <input
      className="c2"
      disabled={true}
      placeholder=" "
      type="number"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
      disabled={true}
    >
      Password
    </span>
    <input
      className="c2"
      disabled={true}
      placeholder=" "
      type="password"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
      disabled={true}
    >
      Search
    </span>
    <input
      className="c2"
      disabled={true}
      placeholder=" "
      type="search"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
      disabled={true}
    >
      Telephone
    </span>
    <input
      className="c2"
      disabled={true}
      placeholder=" "
      type="tel"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
      disabled={true}
    >
      URL
    </span>
    <input
      className="c2"
      disabled={true}
      placeholder=" "
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders as an \`error\` when defined 1`] = `
.c1 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c2 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  border-color: #FF4E64;
}

.c2::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2:hover:not(:focus) {
  border-color: #5A5F65;
}

.c2:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c2:invalid,
.c2:-moz-ui-invalid {
  box-shadow: none;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2:focus {
  border-color: #0CD664;
  outline: none;
}

@media (min-width:31.25em) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 select,
  .c0 input {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<fieldset>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Text
    </span>
    <input
      className="c2"
      placeholder=" "
      type="text"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Date
    </span>
    <input
      className="c2"
      placeholder=" "
      type="date"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Email
    </span>
    <input
      className="c2"
      placeholder=" "
      type="email"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Number
    </span>
    <input
      className="c2"
      placeholder=" "
      type="number"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Password
    </span>
    <input
      className="c2"
      placeholder=" "
      type="password"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Search
    </span>
    <input
      className="c2"
      placeholder=" "
      type="search"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Telephone
    </span>
    <input
      className="c2"
      placeholder=" "
      type="tel"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      URL
    </span>
    <input
      className="c2"
      placeholder=" "
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders correctly for other types 1`] = `
.c1 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c2 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c2::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2:hover:not(:focus) {
  border-color: #5A5F65;
}

.c2:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c2:invalid,
.c2:-moz-ui-invalid {
  box-shadow: none;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2:focus {
  border-color: #0CD664;
  outline: none;
}

@media (min-width:31.25em) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 select,
  .c0 input {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<fieldset>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Text
    </span>
    <input
      className="c2"
      placeholder=" "
      required={true}
      type="text"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Date
    </span>
    <input
      className="c2"
      placeholder=" "
      required={true}
      type="date"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Email
    </span>
    <input
      className="c2"
      placeholder=" "
      required={true}
      type="email"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Number
    </span>
    <input
      className="c2"
      placeholder=" "
      required={true}
      type="number"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Password
    </span>
    <input
      className="c2"
      placeholder=" "
      required={true}
      type="password"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Search
    </span>
    <input
      className="c2"
      placeholder=" "
      required={true}
      type="search"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      Telephone
    </span>
    <input
      className="c2"
      placeholder=" "
      required={true}
      type="tel"
    />
  </label>
  <label
    className="c0"
  >
    <span
      className="c1"
    >
      URL
    </span>
    <input
      className="c2"
      placeholder=" "
      required={true}
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders correctly with \`text\` type by default 1`] = `
.c1 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c2 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c2::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c2:hover:not(:focus) {
  border-color: #5A5F65;
}

.c2:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c2:invalid,
.c2:-moz-ui-invalid {
  box-shadow: none;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2:focus {
  border-color: #0CD664;
  outline: none;
}

@media (min-width:31.25em) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 select,
  .c0 input {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    Example Input
  </span>
  <input
    className="c2"
    placeholder=" "
    type="text"
  />
</label>
`;

exports[`TextInput renders correctly without a label 1`] = `
.c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c0::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:hover:not(:focus) {
  border-color: #5A5F65;
}

.c0:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus {
  border-color: #0CD664;
  outline: none;
}

<input
  className="c0"
  placeholder="Enter code"
  type="text"
/>
`;
